corrige erros e adiciona uma entidade de exemplo

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,8 @@ NODE_ENV=development
 CRYPTO_ALGORITHM=SHA256
 SECRET=
 AUTH_SECRET=
-TYPEORM_HOST=
-TYPEORM_USERNAME=
-TYPEORM_PASSWORD=
-TYPEORM_DATABASE=
-TYPEORM_PORT=3306
+DATABASE_HOST=
+DATABASE_USERNAME=
+DATABASE_PASSWORD=
+DATABASE_NAME=
+DATABASE_PORT=
